[gd_scene load_steps=13 format=2]

[ext_resource path="res://Resources/Styles/panel.tres" type="StyleBox" id=1]
[ext_resource path="res://Resources/Styles/normalbutton.tres" type="StyleBox" id=2]
[ext_resource path="res://Resources/Styles/HoverButton.tres" type="StyleBox" id=3]
[ext_resource path="res://Resources/Styles/pressedbutton.tres" type="StyleBox" id=4]
[ext_resource path="res://Scripts/WeaponController.gd" type="Script" id=5]
[ext_resource path="res://Img Resources/Icons Images/Shield.png" type="Texture" id=6]
[ext_resource path="res://Scripts/WeaponSelector2.gd" type="Script" id=7]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxFlat" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxFlat" id=4]

[sub_resource type="Animation" id=5]
resource_name = "Appear"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 20, 90 ), Vector2( 20, 80 ), Vector2( 20, 60 ), Vector2( 20, 40 ), Vector2( 20, 20 ) ]
}

[node name="Node2D" type="Node2D"]
script = ExtResource( 7 )

[node name="WeaponController" type="CenterContainer" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 160.0
margin_bottom = 71.0
rect_min_size = Vector2( 140, 0 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpDownBtns" type="HBoxContainer" parent="WeaponController"]
margin_top = 10.0
margin_right = 140.0
margin_bottom = 40.0
rect_min_size = Vector2( 140, 25 )
custom_constants/separation = 82
alignment = 1

[node name="UpButton" type="Button" parent="WeaponController/UpDownBtns"]
margin_left = 1.0
margin_right = 29.0
margin_bottom = 30.0
rect_min_size = Vector2( 28, 30 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = SubResource( 1 )
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = ExtResource( 2 )
align = 2
expand_icon = true

[node name="icon" type="Sprite" parent="WeaponController/UpDownBtns/UpButton"]
position = Vector2( 16, 15 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 6 )

[node name="DownButton" type="Button" parent="WeaponController/UpDownBtns"]
margin_left = 111.0
margin_right = 139.0
margin_bottom = 30.0
rect_min_size = Vector2( 28, 30 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = ExtResource( 2 )
expand_icon = true

[node name="icon" type="Sprite" parent="WeaponController/UpDownBtns/DownButton"]
position = Vector2( 12, 15 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 6 )

[node name="UpDownBtns2" type="HBoxContainer" parent="WeaponController"]
margin_top = 6.0
margin_right = 140.0
margin_bottom = 44.0
rect_min_size = Vector2( 140, 25 )
custom_constants/separation = 40
alignment = 1

[node name="UpButton" type="Button" parent="WeaponController/UpDownBtns2"]
margin_left = 21.0
margin_right = 50.0
margin_bottom = 38.0
rect_min_size = Vector2( 29, 38 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = SubResource( 1 )
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = ExtResource( 2 )
align = 2
expand_icon = true

[node name="icon" type="Sprite" parent="WeaponController/UpDownBtns2/UpButton"]
position = Vector2( 19, 19 )
texture = ExtResource( 6 )

[node name="DownButton" type="Button" parent="WeaponController/UpDownBtns2"]
margin_left = 90.0
margin_right = 119.0
margin_bottom = 38.0
rect_min_size = Vector2( 29, 38 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = ExtResource( 2 )
expand_icon = true

[node name="icon" type="Sprite" parent="WeaponController/UpDownBtns2/DownButton"]
position = Vector2( 10, 19 )
texture = ExtResource( 6 )

[node name="WeaponIcon" type="Panel" parent="WeaponController"]
margin_left = 47.0
margin_top = 2.0
margin_right = 93.0
margin_bottom = 48.0
rect_min_size = Vector2( 46, 46 )
custom_styles/panel = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="WeaponController/WeaponIcon"]
position = Vector2( 23, 23 )
scale = Vector2( 1.3, 1.3 )

[node name="anim" type="AnimationPlayer" parent="WeaponController"]
anims/Appear = SubResource( 5 )
[connection signal="pressed" from="WeaponController/UpDownBtns/UpButton" to="WeaponController" method="_on_UpButton_pressed"]
[connection signal="pressed" from="WeaponController/UpDownBtns/DownButton" to="WeaponController" method="_on_DownButton_pressed"]
[connection signal="pressed" from="WeaponController/UpDownBtns2/UpButton" to="WeaponController" method="_on_UpButton_pressed"]
[connection signal="pressed" from="WeaponController/UpDownBtns2/DownButton" to="WeaponController" method="_on_DownButton_pressed"]
